--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "aod-discord-bot.js",
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
+    "@discordjs/rest": "^0.1.0-canary.0",
     "bufferutil": "^4.0.3",
+    "discord-api-types": "^0.23.1",
     "discord.js": "^13.0.1",
     "erlpack": "^0.1.3",
     "html-entities": "^2.3.2",
