--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "description": "",
   "main": "aod-discord-bot.js",
   "dependencies": {
-    "@discordjs/opus": "^0.5.3",
-    "@discordjs/rest": "^0.1.0-canary.0",
+    "@discordjs/opus": "^0.8.0",
+    "@discordjs/rest": "^1.0.0",
     "bufferutil": "^4.0.3",
-    "discord-api-types": "^0.23.1",
-    "discord.js": "^13.0.1",
+    "discord-api-types": "^0.36.3",
+    "discord.js": "^14.0.3",
     "erlpack": "^0.1.3",
-    "html-entities": "^2.3.2",
+    "html-entities": "^2.3.3",
     "md5": "^2.3.0",
     "mysql": "^2.18.1",
     "request": "^2.88.2",
     "sodium": "^3.0.2",
     "sprintf-js": "^1.1.2",
     "tweetnacl": "^1.0.3",
-    "utf-8-validate": "^5.0.5",
+    "utf-8-validate": "^5.0.9",
     "uws": "^100.0.1",
     "zlib-sync": "^0.1.7"
   },
