--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "main": "aod-discord-bot.js",
   "dependencies": {
     "@discordjs/opus": "^0.8.0",
-    "@discordjs/rest": "^1.0.0",
+    "@discordjs/rest": "^1.0.1",
     "bufferutil": "^4.0.3",
-    "discord-api-types": "^0.36.3",
-    "discord.js": "^14.0.3",
+    "discord-api-types": "^0.37.0",
+    "discord.js": "^14.1.1",
     "erlpack": "^0.1.3",
+    "form-data": "^4.0.0",
     "html-entities": "^2.3.3",
     "md5": "^2.3.0",
     "mysql": "^2.18.1",
-    "request": "^2.88.2",
+    "node-fetch": "^2.6.7",
     "sodium": "^3.0.2",
     "sprintf-js": "^1.1.2",
     "tweetnacl": "^1.0.3",
