--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "discord-api-types": "^0.37.0",
     "discord.js": "^14.1.1",
     "erlpack": "^0.1.3",
-    "form-data": "^4.0.0",
+    "esm-hook": "^0.1.4",
     "html-entities": "^2.3.3",
     "md5": "^2.3.0",
     "mysql": "^2.18.1",
-    "node-fetch": "^2.6.7",
+    "node-fetch": "^3.2.9",
     "sodium": "^3.0.2",
     "sprintf-js": "^1.1.2",
     "tweetnacl": "^1.0.3",
