--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "html-entities": "^2.3.3",
     "md5": "^2.3.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.3.3",
     "node-fetch": "^3.3.0",
     "sodium": "^3.0.2",
     "sprintf-js": "^1.1.2",
