--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "discord.js": "^14.7.1",
     "erlpack": "^0.1.3",
     "esm-hook": "^0.1.4",
+    "express": "^4.19.2",
     "html-entities": "^2.3.3",
     "md5": "^2.3.0",
     "mysql": "^2.18.1",
