--- a/package.json
+++ b/package.json
@@ -4,25 +4,16 @@
   "description": "",
   "main": "aod-discord-bot.js",
   "dependencies": {
-    "@discordjs/opus": "^0.9.0",
     "@discordjs/rest": "^2.0.1",
-    "bufferutil": "^4.0.7",
     "discord-api-types": "^0.37.76",
     "discord.js": "^14.7.1",
-    "erlpack": "^0.1.3",
     "esm-hook": "^0.1.4",
     "express": "^4.19.2",
     "html-entities": "^2.3.3",
     "md5": "^2.3.0",
-    "mysql": "^2.18.1",
     "mysql2": "^3.3.3",
     "node-fetch": "^3.3.0",
-    "sodium": "^3.0.2",
-    "sprintf-js": "^1.1.2",
-    "tweetnacl": "^1.0.3",
-    "utf-8-validate": "^6.0.3",
-    "uws": "^200.0.0",
-    "zlib-sync": "^0.1.7"
+    "sprintf-js": "^1.1.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
