Update certificate path in example config

--- a/config-example/aod-discord-bot.config.json
+++ b/config-example/aod-discord-bot.config.json
@@ -5,8 +5,8 @@
     "AOD CmdSgt"
   ],
   "botAPIAllowedIPs": [],
-  "botAPICert": "cert.crt",
-  "botAPIKey": "key.pem",
+  "botAPICert": "./cert/cert.crt",
+  "botAPIKey": "./cert/key.pem",
   "botAPIPort": "4443",
   "botAPIToken": "",
   "clientId": "",
