Moved docker files to a sub directory

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,19 +1,22 @@
 FROM node:lts
 
+WORKDIR /app
+
+# Copy NPM requirements
+COPY ./package.json /app/package.json
+COPY ./package-lock.json /app/package-lock.json
+
+# Install dependencies
+RUN npm install
+
 # Copy bot
 COPY ./aod-discord-bot.js /app/aod-discord-bot.js
 COPY ./deploy-commands.js /app/deploy-commands.js
 COPY ./api /app/api
 COPY ./commands /app/commands
 
-# Copy NPM requirements
-COPY ./package.json /app/package.json
-COPY ./package-lock.json /app/package-lock.json
-
 # Copy entrypoint script
-COPY ./entrypoint.sh /app/entrypoint.sh
-
-WORKDIR /app
+COPY ./docker/entrypoint.sh /app/entrypoint.sh
 
 # Generate self-signed cert
 RUN mkdir -p /app/cert
@@ -22,8 +25,6 @@ RUN openssl req -x509 -nodes -days 365 \
      -newkey rsa:2048 -keyout /app/cert/key.pem \
      -out /app/cert/cert.crt
 
-# Install dependencies
-RUN npm install
 
 CMD ["/bin/sh","entrypoint.sh"]
 EXPOSE 4443
