--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,10 +1,12 @@
 services:
   bot:
-    build: .
+    build:
+      context: ../
+      dockerfile: ./docker/Dockerfile
     ports:
       - "4443:4443"
     restart: unless-stopped
     volumes:
-      - ./config:/app/config
+      - ../config:/app/config
       # Optional: Use a certificate generate outside the Docker build. cert.crt and key.pem must be provided in the mapped volume
       #- ./cert:/app/cert
